# pythonx-pycomposeui

./: .gitmodules  LICENSE  README.md  build.gradle.kts  pyproject.toml  settings.gradle.kts
android/src/main/python/pycomposeui/: main.py
android/src/main/python/pycomposeui/material3/: __init__.py
android/src/main/python/pycomposeui/runtime/: __init__.py
android/src/main/python/pycomposeui/wrapper/: __init__.py
gradle/: libs.versions.toml
pycomposeui/src/androidMain/kotlin/io/github/thisisthepy/pycomposeui/: AlignmentBinding.java  (+3 more)
pythonx/compose/layout/: arrangement.py
pythonx/compose/light/: app.py  build.gradle.kts  jvm.py  main.py  material3.py  settings.gradle.kts
pythonx/compose/light/release/app/: .package
pythonx/compose/light/release/runtime/: release
pythonx/compose/lite/: app.py  build.gradle.kts  jvm.py  runtime.py  settings.gradle.kts
pythonx/compose/lite/gradle/wrapper/: gradle-wrapper.properties
pythonx/compose/lite/release/app/: org.example.project.cfg  skiko-windows-x64.dll.sha256
pythonx/compose/material3/: __init__.py  badge.py  buttons.py  cards.py  color_scheme.py  icon.py  icon_button.py  lists.py  material_theming.py  text.py  text_field.py
pythonx/compose/runtime/: __init__.py
pythonx/compose/test/: main.py
pythonx/compose/ui/: __init__.py  alignment.py  modifier.py
pythonx/compose/ui/unit/: __init__.py
test/android/src/main/: AndroidManifest.xml
test/android/src/main/python/pycomposeui/layout/: __init__.py
test/android/src/main/python/pycomposeui/ui/: modifier.py
test/pycomposeui/: build.gradle.kts
(+14 files in other folders)
